Added counting of sources for MSigDB pathways.

--- a/merge-resources.ipynb
+++ b/merge-resources.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import csv\n",
+    "import collections\n",
     "\n",
     "import pandas\n",
     "import numpy\n",
@@ -472,6 +473,30 @@
     "# Histogram of genes per pathway\n",
     "plt.hist(msigdb_df.genes.map(len), numpy.arange(100));\n",
     "plt.xlim(0, 50);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'REACTOME': 674, 'BIOCARTA': 217, 'PID': 196, 'KEGG': 186, 'ST': 28, 'SA': 10, 'NABA': 10, 'SIG': 8, 'WNT': 1})"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# MSigDB pathways per source database\n",
+    "# https://www.broadinstitute.org/gsea/msigdb/collection_details.jsp#CP\n",
+    "collections.Counter(msigdb_df.name.map(lambda x: x.split('_', 1)[0]))"
    ]
   },
   {
